[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asyncz"
description = "The scheduler that nobody wants but every application needs."
long_description = "The scheduler that nobody wants but every application needs."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "loguru>=0.7.0,<0.8.0",
    "pydantic>=2.5.3,<3.0.0",
    "tzlocal>=4.0,<6.0",
    'backports.zoneinfo;python_version<"3.9"',
]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "asyncz",
    "pydantic",
    "starlette",
    "fastapi",
    "apscheduler",
    "framework",
    "websocket",
    "openapi",
    "ml",
    "machine learning",
    "scheduler",
    "cron",
    "asyncz",
]

[project.urls]
Homepage = "https://github.com/dymmond/asyncz"
Documentation = "https://asyncz.dymmond.com/"
Changelog = "https://asyncz.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/asyncz"


[tool.hatch.envs.default]
dependencies = ["ruff", "pre-commit>=2.17.0,<3.0.0", "twine", "ipdb", "pdbpp"]

[project.optional-dependencies]
testing = [
    "pymongo>=4.3.3,<5.0.0",
    "pytest>=7.1.3,<9.0.0",
    "pytest-cov >=2.12.0,<6.0.0",
    "pytest-asyncio >=0.19.0,<1.0.0",
    "pytest-loguru>=0.2.0,<1",
    "redis>=4.4.0,<6.0.0",
    "mypy>=0.982,<2.0.0",
    "esmerald",
    "pytz>=2022.6",
]

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
lint = "ruff check --fix --line-length 99  asyncz tests docs_src {args}"
build_with_check = "hatch build; twine check dist/*"

[tool.hatch.envs.test]
features = ["testing"]

[tool.hatch.envs.test.scripts]
# needs docker services running
test = "pytest --disable-pytest-warnings {args}"
test_man = "pytest --disable-pytest-warnings -s -vv {args}"
coverage = "pytest --cov=asyncz --cov=tests --cov-report=term-missing:skip-covered --cov-report=html tests {args}"
check_types = "mypy -p asyncz"


[tool.hatch.envs.docs]
dependencies = [
    "mkautodoc >=0.2.0,<0.3.0",
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=9.0.13,<10.0.0",
    "mdx-include >=1.4.2,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.2.5,<0.3.0",
    "mkdocstrings>=0.20.0,<0.30.0",
    "pyyaml >=6.0,<7.0.0",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.version]
path = "asyncz/__init__.py"

[tool.mypy]
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]

exclude = ["docs_src/*"]

[tool.ruff.lint.isort]
known-third-party = ["esmerald", "pydantic", "starlette"]

[[tool.mypy.overrides]]
module = "asyncz.tests.*"
ignore_missing_imports = true
check_untyped_defs = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "asyncpg",
    "alembic",
    "sqlalchemy_utils.*",
    "slugify",
    "pytz",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/asyncz"]
